--- a/packages/SystemUI/res/xml/statusbar_icon_settings.xml
+++ b/packages/SystemUI/res/xml/statusbar_icon_settings.xml
@@ -39,6 +39,10 @@
         android:title="@string/quick_settings_hotspot_label" />
 
     <com.android.systemui.tuner.StatusBarSwitch
+        android:key="volte"
+        android:title="@string/status_bar_volte" />
+
+    <com.android.systemui.tuner.StatusBarSwitch
         android:key="bluetooth"
         android:title="@string/quick_settings_bluetooth_label" />
 
