Status bar notification ticker [1/2]
* abc @ezio84: cleanup and port to Oreo
* du @nychitman1: cleanup and port to Nougat

Change-Id: Idfc5c3a9398d0590ea0ef32c8a6efbca8513a1e8

--- a/packages/SystemUI/res/values/custom_styles.xml
+++ b/packages/SystemUI/res/values/custom_styles.xml
@@ -26,4 +26,9 @@
         <item name="android:textStyle">normal</item>
         <item name="android:textColor">?android:attr/textColorPrimary</item>
     </style>
+
+    <!-- Status bar notification ticker -->
+    <style name="TextAppearance.StatusBar.PhoneTicker" parent="@*android:style/TextAppearance.StatusBar.Ticker">
+        <item name="android:textSize">14dp</item>
+    </style>
 </resources>
