--- a/packages/SystemUI/res/xml/statusbar_icon_settings.xml
+++ b/packages/SystemUI/res/xml/statusbar_icon_settings.xml
@@ -90,6 +90,10 @@
         android:key="vpn"
         android:title="@string/status_bar_vpn" />
 
+    <com.android.systemui.tuner.StatusBarSwitch
+        android:key="nfc"
+        android:title="@string/status_bar_nfc" />
+
     <!-- secure -->
 
 </PreferenceScreen>
