base: fix light accent in recents FAB button
if fab backroud color is light force a dark icon tint

Change-Id: Id50e2228dcf6d7ffddb21a8f1aa3f05b167964e9

--- a/packages/SystemUI/res/values/custom_colors.xml
+++ b/packages/SystemUI/res/values/custom_colors.xml
@@ -23,4 +23,5 @@
     <!-- Floating action button -->
     <color name="fab_color">@*android:color/accent_device_default_light</color>
     <color name="floating_action_button_icon_color">@android:color/white</color>
+    <color name="floating_action_button_icon_color_light">@android:color/black</color>
 </resources>
