--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -124,8 +124,8 @@
     <string name="keycode">Keycode</string>
     <string name="no_home_title">No home button found</string>
     <string name="no_home_message">A home button is required to be able to navigate this device. Please add a home button before saving.</string>
-    <string name="clipboard_description">The Clipboard allows items to be dragged directly to the clipboard. Items can also be dragged directly out of the clipboard when present.</string>
-    <string name="keycode_description">Keycode buttons allow keyboard keys to be added to the Navigation Bar. When pressed they emulate the selected keyboard key. First the key must be selected for the button, followed by an image to be shown on the button.</string>
+    <string name="clipboard_description">The clipboard allows items to be dragged directly to the clipboard. Items can also be dragged directly out of the clipboard when present.</string>
+    <string name="keycode_description">Keycode buttons allow keyboard keys to be added to the navigation bar. When pressed they emulate the selected keyboard key. First the key must be selected for the button, followed by an image to be shown on the button.</string>
     <string name="start">Start</string>
     <string name="center">Center</string>
     <string name="end">End</string>
@@ -139,7 +139,7 @@
     <string name="left">Left</string>
     <string name="right">Right</string>
     <string name="navbar_editor_title">Editor</string>
-    <string name="navbar_editor_summary">Configure navigaton bar</string>
+    <string name="navbar_editor_summary">Configure navigation bar</string>
 
     <!-- key disable QS Tile -->
     <string name="quick_settings_key_disable_label">Disable keys</string>
