--- a/packages/SystemUI/res/values-ru/custom_strings.xml
+++ b/packages/SystemUI/res/values-ru/custom_strings.xml
@@ -144,7 +144,9 @@
   <string name="qs_show_battery">Отображать значок батареи</string>
   <string name="qs_show_carrier">Отображать название оператора</string>
   <string name="qs_show_clock">Показывать часы</string>
+  <string name="qs_show_mini">Мини режим</string>
   <string name="qs_header">Заголовок</string>
   <string name="quick_settings_google_assist_label">Ассистент</string>
   <string name="quick_settings_google_voice_assist_label">Голосовой ассистент</string>
+  <string name="tuner_brightness_position_bottom">Ползунок яркости внизу</string>
 </resources>
