--- a/packages/SystemUI/res/values-ru/custom_strings.xml
+++ b/packages/SystemUI/res/values-ru/custom_strings.xml
@@ -149,4 +149,7 @@
   <string name="quick_settings_google_assist_label">Ассистент</string>
   <string name="quick_settings_google_voice_assist_label">Голосовой ассистент</string>
   <string name="tuner_brightness_position_bottom">Ползунок яркости внизу</string>
+  <!-- Smart pixels QS tile -->
+  <string name="quick_settings_smart_pixels">Умные пиксели</string>
+  <string name="quick_settings_smart_pixels_on_power_save">Автоматически включенные умные пиксели</string>
 </resources>
