--- a/core/res/res/values/arrays.xml
+++ b/core/res/res/values/arrays.xml
@@ -166,6 +166,7 @@
     </string-array>
 
     <array name="sim_colors">
+        <item>#ff5a9af8</item>
         <item>@color/Teal_700</item>
         <item>@color/Blue_700</item>
         <item>@color/Indigo_700</item>
