--- a/packages/SystemUI/res/values/custom_strings.xml
+++ b/packages/SystemUI/res/values/custom_strings.xml
@@ -182,6 +182,6 @@
     <string name="quick_settings_smart_pixels_on_power_save">Auto-enabled smart pixels</string>
 
     <!-- Volte icon switch -->
-    <string name="status_bar_volte">VOLTE</string>
+    <string name="status_bar_volte">VoLTE</string>
 
 </resources>
